# wave-learner

./: .gitignore  package-lock.json  package.json  vite.config.ts
src-wasm/: Cargo.toml  build.bat
src-wasm/src/: lib.rs  trainer.rs
src/lib/: WaveDrawer.svelte
src/routes/: +page.svelte
